--- a/dev/less/colors.less
+++ b/dev/less/colors.less
@@ -2,10 +2,10 @@
 // Split Complementary Colors - http://www.colorhexa.com/63afe7
 
 // Base Yellow
-@yello_base: #e7dd63;
+@yellow_base: #e7dd63;
 
 // Base Blue
 @blue_base: #63afe7;
 
 // Base Corral (red)
-@corral_base: #e7636d;
+@coral_base: #e7636d;
