--- a/dev/less/grid.less
+++ b/dev/less/grid.less
@@ -6,6 +6,7 @@
 // LESS Variables
 // Define Grid Width, or leave 100% for a fluid grid
 @grid-width: 100%;
+@grid-spacing: 20px;
 
 /* apply a natural box layout model to all elements */
 *, *:before, *:after {
@@ -22,7 +23,7 @@
 .grid-row {
   width: @grid-width;
   margin: 0 auto;
-  padding-left: 2rem;
+  padding-left: @grid-spacing;
 
   /* Thirds */
   .col-1-3 {
@@ -60,8 +61,7 @@
   /* Full */
   .col-2-2, .col-3-3, .col-4-4, .col-5-5, .full-width {
     width:100%;
-    margin-bottom:2rem;
-    padding:0 2rem 0 0;
+    padding:0 @grid-spacing 0 0;
   }
 
   /* Global Grid Block Properties */
@@ -70,8 +70,7 @@
   .col-1-4, .col-2-4, .col-3-4,
   .col-1-5, .col-2-5, .col-3-5, .col-4-5 {
     float:left;
-    margin-bottom: 2rem;
-    padding:0 2rem 0 0;
+    padding:0 @grid-spacing 0 0;
   }
 
   /* Reverse the order of Grid blocks */
