--- a/dev/less/style.less
+++ b/dev/less/style.less
@@ -2,3 +2,95 @@
 @import "grid.less";
 @import "type.less";
 @import "colors.less";
+
+@spacing: 20px;
+
+// Alternate font sizes
+.text-small {
+	font-size: .8em;
+}
+.text-large {
+	font-size: 1.65em;
+}
+
+// Parallax Styles
+.scroll-wrap {
+  position: relative; 
+  display: block;
+  width: 100%;
+  height: 100%; 
+	text-align: center; 
+	
+  .grid-row {
+  	position: absolute; 
+  	bottom: 0px; 
+  	height: auto; 	
+		width: 100%; 
+
+		padding-top: @spacing*6;
+		padding-bottom: @spacing*5;
+		background-color: #000;
+		color: #fff;
+  }
+	
+	&:nth-child(1) {
+		background: url(../img/2.jpg) 50% 0 repeat fixed; 
+		background-color: @yellow_base;
+	}
+	&:nth-child(2) {
+		background: url(../img/3.jpg) 50% 0 repeat fixed; 
+		background-color: @coral_base;
+	}
+	&:nth-child(3) {
+		background: url(../img/4.jpg) 50% 0 repeat fixed; 
+		background-color: @blue_base;
+	}
+	&:nth-child(4) {
+		background: url(../img/5.jpg) 50% 0 repeat fixed; 
+		background-color: @yellow_base;
+	}
+	&:nth-child(5) {}
+
+	h2, p {
+		opacity: .65;
+		text-shadow: 0 0 0.2em rgba(255,255,255,0.35);
+	}
+
+} // .scroll-wrap
+
+// Masthead Styles
+.masthead {
+	background-color: rgba(0,0,0,0.75);
+	padding: @spacing;
+	box-shadow: 0 3px 15px #000;
+
+	width:100%;
+	position:fixed;
+	z-index:1;
+	top:0px;
+
+	nav {
+		ul {
+			margin: 0;
+			display: table;
+			width: 100%;
+			border-radius: .5em;
+			overflow: hidden;
+			li {
+				display: table-cell;
+				a {
+					display: block;
+					padding: .5em 1em;
+					.text-large;
+					color: @blue_base;
+					text-align: center;
+					text-decoration: none;
+					background-color: rgba(255,255,255,0.15);
+					&:hover {
+						background-color: rgba(255,255,255,0.2);
+					}
+				}
+			}
+		}
+	}
+}
