--- a/live/css/grid.css
+++ b/live/css/grid.css
@@ -19,7 +19,7 @@
 .grid-row {
   width: 100%;
   margin: 0 auto;
-  padding-left: 2rem;
+  padding-left: 20px;
   /* Thirds */
   /* Quarters (as well as one-half)*/
   /* Fifths */
@@ -61,8 +61,7 @@
 .grid-row .col-5-5,
 .grid-row .full-width {
   width: 100%;
-  margin-bottom: 2rem;
-  padding: 0 2rem 0 0;
+  padding: 0 20px 0 0;
 }
 .grid-row .col-1-2,
 .grid-row .col-1-3,
@@ -75,8 +74,7 @@
 .grid-row .col-3-5,
 .grid-row .col-4-5 {
   float: left;
-  margin-bottom: 2rem;
-  padding: 0 2rem 0 0;
+  padding: 0 20px 0 0;
 }
 .grid-row.alt .col-1-2,
 .grid-row.alt .col-1-3,
