--- a/live/css/style.css
+++ b/live/css/style.css
@@ -1,3 +1,4 @@
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800);
 /* 
 html5doctor.com Reset Stylesheet
 v1.6.1
@@ -178,7 +179,7 @@ select {
 .grid-row {
   width: 100%;
   margin: 0 auto;
-  padding-left: 2rem;
+  padding-left: 20px;
   /* Thirds */
   /* Quarters (as well as one-half)*/
   /* Fifths */
@@ -220,8 +221,7 @@ select {
 .grid-row .col-5-5,
 .grid-row .full-width {
   width: 100%;
-  margin-bottom: 2rem;
-  padding: 0 2rem 0 0;
+  padding: 0 20px 0 0;
 }
 .grid-row .col-1-2,
 .grid-row .col-1-3,
@@ -234,8 +234,7 @@ select {
 .grid-row .col-3-5,
 .grid-row .col-4-5 {
   float: left;
-  margin-bottom: 2rem;
-  padding: 0 2rem 0 0;
+  padding: 0 20px 0 0;
 }
 .grid-row.alt .col-1-2,
 .grid-row.alt .col-1-3,
@@ -250,6 +249,7 @@ select {
   float: right;
 }
 html {
+  font-family: "Open Sans", sans-serif;
   font-size: 100%;
 }
 h1,
@@ -313,16 +313,78 @@ blockquote {
   -ms-hyphens: auto;
   hyphens: auto;
 }
-dl,
-ol,
-ul {
-  font-size: 1em;
-  margin: 0 0 1.4em;
-  padding: 0;
+.text-small {
+  font-size: .8em;
 }
-dd,
-dt,
-li {
-  line-height: 1.4;
+.text-large {
+  font-size: 1.65em;
+}
+.scroll-wrap {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+.scroll-wrap .grid-row {
+  position: absolute;
+  bottom: 0px;
+  height: auto;
+  width: 100%;
+  padding-top: 120px;
+  padding-bottom: 100px;
+  background-color: #000;
+  color: #fff;
+}
+.scroll-wrap:nth-child(1) {
+  background: url(../img/2.jpg) 50% 0 repeat fixed;
+  background-color: #e7dd63;
+}
+.scroll-wrap:nth-child(2) {
+  background: url(../img/3.jpg) 50% 0 repeat fixed;
+  background-color: #e7636d;
+}
+.scroll-wrap:nth-child(3) {
+  background: url(../img/4.jpg) 50% 0 repeat fixed;
+  background-color: #63afe7;
+}
+.scroll-wrap:nth-child(4) {
+  background: url(../img/5.jpg) 50% 0 repeat fixed;
+  background-color: #e7dd63;
+}
+.scroll-wrap h2,
+.scroll-wrap p {
+  opacity: .65;
+  text-shadow: 0 0 0.2em rgba(255, 255, 255, 0.35);
+}
+.masthead {
+  background-color: rgba(0, 0, 0, 0.75);
+  padding: 20px;
+  box-shadow: 0 3px 15px #000;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+  top: 0px;
+}
+.masthead nav ul {
   margin: 0;
+  display: table;
+  width: 100%;
+  border-radius: .5em;
+  overflow: hidden;
+}
+.masthead nav ul li {
+  display: table-cell;
+}
+.masthead nav ul li a {
+  display: block;
+  padding: .5em 1em;
+  font-size: 1.65em;
+  color: #63afe7;
+  text-align: center;
+  text-decoration: none;
+  background-color: rgba(255, 255, 255, 0.15);
+}
+.masthead nav ul li a:hover {
+  background-color: rgba(255, 255, 255, 0.2);
 }
